force-app/main/default/objects/Apttus_Config2__Footnote__c/Apttus_Config2__Footnote__c.object-meta.xml
<CustomObject>
    <description>Represents a single footnote in a document</description>
    <label>Footnote</label>
    <nameField>
        <label>Footnote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Footnote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>