force-app/main/default/objects/Apttus_Config2__Footnote__c/fields/Apttus_Config2__Body__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Body__c</fullName>
    <description>The body of the footnote</description>
    <inlineHelpText>The body of the footnote</inlineHelpText>
    <label>Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>