force-app/main/default/objects/Apttus_Config2__Footnote__c/fields/Apttus_Config2__Text__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Text__c</fullName>
    <description>The footnote text. This is deprecated. Please use the Body to store the content.</description>
    <inlineHelpText>The footnote text. This is deprecated. Please use the Body to store the content.</inlineHelpText>
    <label>Text (Deprecated)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>