force-app/main/default/objects/Apttus_Config2__Footnote__c/fields/Apttus_Config2__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Type__c</fullName>
    <description>The footnote type</description>
    <inlineHelpText>The footnote type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>